--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,3 +20,8 @@ jobs:
         cache: 'gradle'
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload
+      uses: actions/upload-artifact@v3
+      with:
+        name: "Velocity Unsigned"
+        path: ./proxy/build/libs/*all.jar
